--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,100 @@
 @charset "utf-8";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  color: #111;
+}
+ul,
+li {
+  list-style: none;
+}
+
+/* 헤더 */
+.header {
+  margin: auto;
+  width: 100%;
+  height: 120px;
+  max-width: 1920px;
+  background-color: #fff;
+}
+.header-inner {
+  position: relative;
+  width: calc(100% - 5%);
+  height: 100%;
+  margin: auto;
+  padding: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  /* background-color: aqua; */
+}
+/* 메뉴 */
+.menu span {
+  font-size: 25px;
+  cursor: pointer;
+}
+
+/* 메뉴 리스트 */
+.menu-list {
+  position: absolute;
+  top: 120px;
+  width: 594px;
+  height: 400px;
+  gap: 2px;
+  display: flex;
+  font-size: 20px;
+  line-height: 1.5;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: none;
+}
+.menu-list::before {
+  position: absolute;
+  left: 50%;
+  content: "";
+  width: 2px;
+  height: 360px;
+  background-color: #fff;
+}
+.menu-product {
+  width: 50%;
+  padding: 15px;
+}
+.menu-etc {
+  width: 50%;
+  padding: 15px;
+}
+.menu span:hover + .menu-list {
+  display: block;
+}
+/* 로고 */
+.logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/* 마이페이지 */
+.mypage-menu {
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 25px;
+  text-transform: uppercase;
+}
+/* 비주얼 */
+.visual {
+  width: 100%;
+  height: 680px;
+  overflow: hidden;
+}.visual-slide li{
+    position: relative;
+}
+.visual-slide li img {
+  width: 100%;
+  object-fit: contain;
+}
