--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ button.viewMore:active {
   display: block;
   width: 100%;
 }
-.necklace ul li a p {
+.acc-title {
   position: absolute;
   bottom: 10%;
   right: 2%;
@@ -359,7 +359,7 @@ button.viewMore:active {
   display: block;
   width: 100%;
 }
-.keyring ul li a p {
+.acc-title {
   position: absolute;
   bottom: 10%;
   left: 2%;
@@ -372,20 +372,80 @@ button.viewMore:active {
   left: 0;
   width: 100%;
   height: 100%;
+  padding-top: 45%;
   background-color: rgba(255, 255, 255, 0.5);
   text-align: center;
   color: #000000;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
+
 
 /* aboutB */
 .aboutB {
+  position: relative;
   width: 100%;
   height: 41.6vw;
   margin-bottom: 200px;
   overflow: hidden;
 }
+.aboutB::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.35);
+  content: "";
+}
 .aboutB img {
   width: 100%;
   object-fit: cover;
+}
+.aboutB-logo {
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  transform: translateY(-50%);
+  width: 17%;
+  z-index: 1;
+}
+.aboutB-logo img {
+  filter: drop-shadow(5px 5px 8px rgba(0, 0, 0, 0.25));
+}
+.aboutB-caption {
+  width: 55%;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+.aboutB-caption img {
+  width: 100%;
+}
+.about-creativity {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-bottom: 12%;
+  gap: 15%;
+}
+
+.about-durability {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 15%;
+}
+.aboutB-txt {
+  font-size: 2.5rem;
+}
+.aboutB-txt h1{
+  font-weight: 500;
+  margin-bottom: 5%;
+  color: #fff;
+}
+.aboutB-txt p{
+  color: #fff;
+  white-space: nowrap;
 }
