--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ button.viewMore:active {
   display: block;
   width: 100%;
 }
-.acc-title {
+.necklace .acc-title {
   position: absolute;
   bottom: 10%;
   right: 2%;
@@ -359,7 +359,7 @@ button.viewMore:active {
   display: block;
   width: 100%;
 }
-.acc-title {
+.keyring .acc-title {
   position: absolute;
   bottom: 10%;
   left: 2%;
@@ -372,11 +372,19 @@ button.viewMore:active {
   left: 0;
   width: 100%;
   height: 100%;
-  padding-top: 45%;
+  padding: 45% 0;
   background-color: rgba(255, 255, 255, 0.5);
   text-align: center;
   color: #000000;
   font-size: 2.5rem;
+opacity: 0;
+  transition: all 0.5s;
+}
+.necklace li:hover .acc-caption{
+opacity: 1;
+}
+.keyring li:hover .acc-caption{
+opacity: 1;
 }
 
 
