--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,27 @@ li {
 html {
   font-size: 10px;
 }
+/* go to top */
+.top-btn {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 5%;
+  bottom: 8%;
+  font-size: 2rem;
+  text-align: center;
+  line-height: 45px;
+  border-radius: 50%;
+  border: 1px solid #404040;
+  background-color: rgb(255, 255, 255);
+  z-index: 9999;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: all 0.15s;
+}
+.top-btn:hover {
+  opacity: 1;
+}
 /* INNER */
 .inner {
   margin: auto;
@@ -50,6 +71,7 @@ html {
 
 /* 메뉴 리스트 */
 .menu-list {
+  display: none;
   position: absolute;
   top: 120px;
   width: 594px;
@@ -60,8 +82,8 @@ html {
   line-height: 1.5;
   background-color: rgba(255, 255, 255, 0.5);
   z-index: 9;
-  opacity: 0;
-  transition: all 0.1s;
+  /* opacity: 0; */
+  /* transition: all 0.1s; */
 }
 .menu-list::after {
   position: absolute;
@@ -81,9 +103,15 @@ html {
   width: 50%;
   padding: 15px;
 }
-.menu span:hover + .menu-list {
-  opacity: 1;
+.menu-list a{
+  transition: all 0.3s;
 }
+.menu-list a:hover{
+  color: #fff;
+}
+/* .menu span:hover + .menu-list {
+  opacity: 1;
+} */
 /* 로고 */
 .logo {
   position: absolute;
@@ -257,12 +285,12 @@ html {
 }
 .ring-viewMore {
   position: relative;
-  /* text-align: center; */
   width: 40%;
   height: 100%;
   /* background-color: aquamarine; */
 }
 .ring-viewMore h1 {
+  width: 100%;
   position: absolute;
   top: 25%;
   right: 50%;
@@ -429,6 +457,7 @@ button.viewMore:active {
   z-index: 1;
 }
 .aboutB-caption img {
+  min-width: 100px;
   width: 100%;
 }
 .about-creativity {
@@ -475,22 +504,42 @@ button.viewMore:active {
   height: 40.5vw;
   border: 1px solid #5f5f5f;
 }
-.review-content img{
+.review-content img {
   width: 100%;
   height: 32.8vw;
   object-fit: cover;
 }
-.review-txt{
+.review-txt {
   padding: 15px;
   font-size: 2rem;
 }
-.review-txt .nickname{
+.review-txt .nickname {
   font-size: 2.5rem;
   padding-bottom: 10px;
 }
 /* footer */
-.footer{
+.footer {
   width: 100%;
-  height: 820px;
+  height: 600px;
   background-color: #000000;
+  color: #999;
+  font-size: 1.7rem;
+}
+.footer-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+}
+.footer span {
+  display: block;
+  /* width: 6.5%; */
+/* filter: drop-shadow(0px 0px 2px rgb(255, 255, 255)); */
+}
+.cs {
+  position: absolute;
+  bottom: 10%;
+  display: flex;
+  align-items: flex-end;
+  gap: 20px;
 }
