--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,119 @@
 @charset "utf-8";
 
-@media screen {
-    
+/* 노트북 */
+@media screen and (max-width: 1400px) {
+  html {
+    font-size: 8px;
+  }
+  /* 헤더 */
+  .menu-list {
+    height: 330px;
+  }
+  .menu-list::after {
+    height: 300px;
+  }
+  /* aboutA */
+  .aboutA-txt img {
+    width: 150px;
+  }
+  .aboutB-logoB {
+    width: 14%;
+  }
+  .about-creativity,
+  .about-durability {
+    gap: 10%;
+  }
+}
+@media screen and (max-width: 1160px) {
+    .aboutB-txt h1{
+        font-size: 3rem;
+    }
+    .aboutB-txt p{
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 1024px) {
+    html {
+        font-size: 6px;
+      }
+      .menu span {
+        font-size: 3rem;
+    }
+      .mypage-menu {
+        width: 200px;
+        font-size: 3rem;
+      }
+      .menu-list{
+        width: 500px;
+        font-size: 2.7rem;
+      }
+    .aboutA-txt img {
+        width: 100px;
+    }
+    .aboutB-txt h1{
+        font-size: 3.5rem;
+    }
+    .aboutB-txt p{
+        font-size: 2.5rem;
+    }
+
+}
+@media screen and (max-width: 950px) {
+    button.viewMore {
+        padding: 8% 0;
+      }    
+}
+/* 태블릿 */
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 4.8px;
+  }
+  .header {
+    height: 80px;
+  }
+  .logo {
+    padding: 10px 0;
+  }
+  .mypage-menu {
+    width: 150px;
+  }
+  .menu-list {
+    width: 300px;
+    height: 230px;
+    top: 80px;
+    font-size: 2.5rem;
+  }
+  .menu-list::after {
+    height: 200px;
+  }
+  .logo {
+    height: 80px;
+  }
+  .aboutA {
+    height: 65vw;
+  }
+  .aboutA-pc {
+    display: none;
+  }
+  .aboutA-tablet {
+    width: 100%;
+    object-fit: cover;
+    display: block;
+  }
+  .aboutA-txt img {
+    width: 100px;
+  }
+  .aboutA-txt h1 {
+    font-size: 24px;
+  }
+  .aboutA-txt p {
+    font-size: 16px;
+  }
+
+}
+/* 삼성 */
+@media screen and (max-width: 420px) {
+}
+/* 아이폰 */
+@media screen and (max-width: 320px) {
 }
