--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
+@import url("font.css");
 * {
   margin: 0;
   padding: 0;
@@ -23,7 +24,7 @@ html {
   position: fixed;
   right: 5%;
   bottom: 8%;
-  font-size: 2rem;
+  font-size: 20px;
   text-align: center;
   line-height: 45px;
   border-radius: 50%;
@@ -103,11 +104,12 @@ html {
   width: 50%;
   padding: 15px;
 }
-.menu-list a{
+.menu-list a {
   transition: all 0.3s;
 }
-.menu-list a:hover{
+.menu-list a:hover {
   color: #fff;
+  font-weight: 400;
 }
 /* .menu span:hover + .menu-list {
   opacity: 1;
@@ -118,6 +120,10 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.logo img {
+  width: 100%;
+  height: 100%;
 }
 /* 마이페이지 */
 .mypage-menu {
@@ -150,10 +156,23 @@ html {
   /* height: 740px; */
   /* overflow: hidden; */
 }
+.earring-inner {
+  position: relative;
+  display: block;
+}
 /* TITLE */
 .earring-title {
   padding: 15px 0;
 }
+/* .earring-title::after {
+  position: absolute;
+  top: 67px;
+  left: 210px;
+  content: "";
+  width: 220px;
+  height: 2px;
+  background-color: #111;
+} */
 .earring-title a {
   font-size: 5rem;
 }
@@ -258,26 +277,30 @@ html {
 .aboutA-txt {
   position: absolute;
   top: 50%;
+  left: 10%;
   transform: translateY(-50%);
   text-align: center;
 }
+.aboutA-txt img {
+  width: 180px;
+}
 .aboutA-txt h1 {
-  margin: 50px 0;
-  font-size: 4.5rem;
+  margin: 50px 0 30px 0;
+  font-size: 4rem;
 }
 .aboutA-txt p {
-  font-size: 4rem;
+  font-size: 3rem;
   line-height: 1.2;
 }
 /* RING */
 .ring {
   width: 100%;
-  height: 1000px;
+  height: 70vw;
+  max-height: 1000px;
   margin-bottom: 200px;
 }
 .ring-inner {
   display: flex;
-  height: 100%;
 }
 .ring-product {
   width: 60%;
@@ -286,8 +309,9 @@ html {
 .ring-viewMore {
   position: relative;
   width: 40%;
-  height: 100%;
+  height: 54vw;
   /* background-color: aquamarine; */
+  overflow: hidden;
 }
 .ring-viewMore h1 {
   width: 100%;
@@ -296,9 +320,10 @@ html {
   right: 50%;
   transform: translate(50%, -25%);
   font-weight: normal;
-  font-size: 10rem;
-  letter-spacing: 10rem;
-  text-indent: 10rem;
+  font-size: 4vw;
+  letter-spacing: 4vw;
+  text-indent: 4vw;
+  text-align: center;
   z-index: 1;
 }
 .ring-img {
@@ -315,9 +340,9 @@ button.viewMore {
   left: 50%;
   transform: translateX(-50%);
   padding: 40px 0;
-  font-size: 4rem;
-  letter-spacing: 1rem;
-  text-indent: 1rem;
+  font-size: 2rem;
+  letter-spacing: 1vw;
+  text-indent: 1vw;
   color: #000000;
   font-weight: normal;
   background-color: #fff;
@@ -333,13 +358,19 @@ button.viewMore:active {
 /* acc */
 .acc {
   width: 100%;
-  height: 960px;
+  height: 50vw;
   margin-bottom: 200px;
 }
 .acc-inner {
   width: 100%;
   display: flex;
 }
+.line {
+  width: 80%;
+  height: 3px;
+  background-color: #ffffffca;
+}
+
 /* necklace */
 .necklace {
   width: 50%;
@@ -352,11 +383,10 @@ button.viewMore:active {
   flex-wrap: wrap;
 }
 .necklace ul li {
+  position: relative;
   width: 50%;
   height: 50%;
-}
-.necklace ul li {
-  position: relative;
+  transition: all 1s;
 }
 .necklace ul li a img {
   display: block;
@@ -366,8 +396,50 @@ button.viewMore:active {
   position: absolute;
   bottom: 10%;
   right: 2%;
-  font-size: 5rem;
+  font-size: 6rem;
+  transition: all 1s;
 }
+.necklaceline {
+  position: absolute;
+  bottom: 40px;
+  right: -100%;
+  opacity: 0;
+  /* animation: neckline linear 1s */
+}
+@keyframes neckline {
+  0% {
+    right: -100%;
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  80% {
+    opacity: 0.6;
+  }
+  100% {
+    right: 0;
+    opacity: 1;
+  }
+}
+.necklace li:nth-child(2):hover .necklaceline {
+  animation: neckline linear 0.6s forwards;
+}
+.necklace li:nth-child(2):hover {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+.necklace li:nth-child(2):hover .acc-title {
+  color: #fff;
+}
+/* .necklace .acc-title::after{
+  position: absolute;
+  top: 67px;
+  right: -10px;
+  content: "";
+  width: 35rem;
+  height: 2px;
+  background-color: #111;
+} */
 /* keyring */
 .keyring {
   width: 50%;
@@ -392,7 +464,49 @@ button.viewMore:active {
   position: absolute;
   bottom: 10%;
   left: 2%;
-  font-size: 5rem;
+  font-size: 6rem;
+  transition: all 1s;
+}
+.keyringline {
+  position: absolute;
+  bottom: 40px;
+  left: -100%;
+  opacity: 0;
+}
+@keyframes keyline {
+  0% {
+    left: -100%;
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  80% {
+    opacity: 0.6;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+.keyring li:nth-child(3):hover .keyringline {
+  animation: keyline linear 0.6s forwards;
+}
+/* .keyring .acc-title::after {
+  position: absolute;
+  top: 67px;
+  left: -8px;
+  content: "";
+  width: 35rem;
+  height: 2px;
+  background-color: #111;
+} */
+
+.keyring li:nth-child(3):hover {
+  background-color: rgba(0, 0, 0, 0.35);
+}
+.keyring li:nth-child(3):hover .acc-title {
+  color: #fff;
 }
 /* 상품정보 */
 .acc-caption {
@@ -424,6 +538,11 @@ button.viewMore:active {
   margin-bottom: 200px;
   overflow: hidden;
 }
+.aboutB-inner {
+  padding: 5% 0;
+  display: flex;
+  justify-content: space-around;
+}
 .aboutB::after {
   position: absolute;
   top: 0;
@@ -432,21 +551,37 @@ button.viewMore:active {
   right: 0;
   background: rgba(0, 0, 0, 0.35);
   content: "";
+  /* z-index: -1; */
 }
 .aboutB img {
   width: 100%;
   object-fit: cover;
 }
 .aboutB-logo {
+  width: 20%;
   position: absolute;
   top: 50%;
   right: 10%;
   transform: translateY(-50%);
-  width: 17%;
   z-index: 1;
 }
+
 .aboutB-logo img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 80%;
   filter: drop-shadow(5px 5px 8px rgba(0, 0, 0, 0.25));
+}
+.aboutB-logoB {
+  width: 15%;
+  min-width: 100px;
+  display: flex;
+  justify-content: center;
+  /* background-color: aqua; */
+}
+.aboutB-logoB img {
+  width: 100%;
 }
 .aboutB-caption {
   width: 55%;
@@ -465,26 +600,26 @@ button.viewMore:active {
   display: flex;
   align-items: center;
   padding-bottom: 12%;
-  gap: 15%;
+  gap: 8%;
 }
 
 .about-durability {
   width: 100%;
   display: flex;
   align-items: center;
-  gap: 15%;
+  gap: 8%;
 }
-.aboutB-txt {
-  font-size: 2.5rem;
-}
+
 .aboutB-txt h1 {
-  font-weight: 500;
+  font-size: 3.5rem;
+  font-weight: 600;
   margin-bottom: 5%;
   color: #fff;
 }
 .aboutB-txt p {
+  font-size: 2.5rem;
   color: #fff;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 /* REVIEW */
@@ -493,16 +628,19 @@ button.viewMore:active {
   padding-left: 5%;
   margin-bottom: 200px;
 }
+
 .review h1 {
   font-size: 5.5rem;
   font-weight: normal;
-  padding-bottom: 1%;
   letter-spacing: 2rem;
+  padding-bottom: 1%;
 }
+
 .review-content {
   width: 100%;
-  height: 40.5vw;
-  border: 1px solid #5f5f5f;
+  /* height: 42vw; */
+  border-radius: 3px;
+  border: 1px solid #9e9e9e;
 }
 .review-content img {
   width: 100%;
@@ -510,17 +648,19 @@ button.viewMore:active {
   object-fit: cover;
 }
 .review-txt {
-  padding: 15px;
+  margin: 15px;
   font-size: 2rem;
+}
+.review-txt p {
+  padding: 0 0 10px 0;
 }
 .review-txt .nickname {
   font-size: 2.5rem;
-  padding-bottom: 10px;
 }
 /* footer */
 .footer {
   width: 100%;
-  height: 600px;
+  height: 31vw;
   background-color: #000000;
   color: #999;
   font-size: 1.7rem;
@@ -534,9 +674,13 @@ button.viewMore:active {
 .footer span {
   display: block;
   /* width: 6.5%; */
-/* filter: drop-shadow(0px 0px 2px rgb(255, 255, 255)); */
+  /* filter: drop-shadow(0px 0px 2px rgb(255, 255, 255)); */
+}
+.footer span > a {
+  color: #999;
 }
 .cs {
+  font-size: 2rem;
   position: absolute;
   bottom: 10%;
   display: flex;
