--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ li {
 }
 html {
   font-size: 7.5px;
-  color: #333
+  color: #333;
 }
 /* go to top */
 .top-btn {
@@ -133,6 +133,9 @@ html {
   justify-content: space-between;
   font-size: 2.5rem;
   text-transform: uppercase;
+}
+#mypage-mobile{
+  display: none;
 }
 /* VISUAL */
 .visual-slide {
@@ -413,7 +416,6 @@ button.viewMore:active {
 }
 @keyframes neckline {
   0% {
-    right: -100%;
     opacity: 0;
   }
   50% {
@@ -555,7 +557,7 @@ button.viewMore:active {
   left: 0;
   bottom: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.35);
+  background: rgba(0, 0, 0, 0.4);
   content: "";
   /* z-index: -1; */
 }
@@ -589,7 +591,6 @@ button.viewMore:active {
 .aboutB-logoB img {
   display: block;
   width: 100%;
-  
 }
 .aboutB-caption {
   width: 55%;
@@ -680,6 +681,7 @@ button.viewMore:active {
   padding: 5%;
 }
 .footer span {
+  font-size: 2rem;
   display: block;
   /* width: 6.5%; */
   /* filter: drop-shadow(0px 0px 2px rgb(255, 255, 255)); */
@@ -691,6 +693,11 @@ button.viewMore:active {
   font-size: 2rem;
   position: absolute;
   bottom: 10%;
+  display: flex;
+  align-items: flex-end;
+  gap: 20px;
+}
+.cs-bank{
   display: flex;
   align-items: flex-end;
   gap: 20px;
